<resources>
    <string name="search__hint">search</string>
    <string name="search__welcome_message">Search for something&#8230;</string>

    <string name="search__no_results">Sorry, no results found.</string>
    <string name="no_notifications">No notifications found.</string>
    <string name="no_friends">You haven\'t added any friends.</string>

    <string name="action_undo">undo</string>
    <string name="ok">OK</string>
    <string name="to">TO:</string>

    <string name="general_notification_channel_title">General</string>
    <string name="general_notification_channel_description">These are general notifications</string>
    <string name="friend_request_notification_channel_title">Friendship Requests</string>
    <string name="friend_request_notification_channel_description">These are notifications regarding connected friends</string>
    <string name="messages_notification_channel_title">New Messages</string>
    <string name="messages_notification_channel_description">These are notifications regarding messaging</string>

    <string name="account">Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="update_password">Update Password</string>

    <string name="devices">Devices</string>
    <string name="develop">Develop</string>

    <string name="username">Username</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>

    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="create_chat">Create Chat</string>

    <string name="error_email_blank">Email Address is blank</string>
    <string name="error_password_blank">Password is blank</string>
    <string name="error_first_name_blank">First name is blank</string>
    <string name="error_last_name_blank">Last name is blank</string>

    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="verify_password">Verify Password</string>

    <string name="update">Update</string>
    <string name="verify_email">Verify Email</string>

    <string name="password_reset">Password Reset</string>
    <string name="password_reset_complete_message">An email has be sent to %1$s.</string>
    <string name="open_email">Open Email</string>

    <string name="password_reset_message">Enter your account\'s email address and an email for resetting you password will be send to the address if it exists</string>
    <string name="profile">Profile</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>

    <string name="appkit__username">%1$s %2$s</string>

    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Unfriend</string>

    <plurals name="friends_count">
        <item quantity="zero">%d Friends</item>
        <item quantity="one">%d Friend</item>
        <item quantity="other">%d Friends</item>
    </plurals>

    <plurals name="followers_count">
        <item quantity="zero">%d Followers</item>
        <item quantity="one">%d Followers</item>
        <item quantity="other">%d Followers</item>
    </plurals>

    <string name="notifications">Notifications</string>
    <string name="action">action</string>
    <string name="debug">Develop</string>

    <string name="settings">Settings</string>
    <string name="my_friends">My Friends</string>
    <string name="chat">Chat</string>
    <string name="chats">Chats</string>
    <string name="chat_members">Chat Members</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="new_conversation">New Conversation</string>
    <string name="new_conversation_hint">type a name&#8230;</string>

    <string name="recording_cancelled">Recording cancelled</string>
    <string name="recording_too_short">Recording too short</string>
    <string name="audio_length_limit_reached">Audio length limit reached</string>
    <string name="send_or_discard_recording">Send or discard recording</string>
    <string name="seconds_remaining">Seconds remaining %d</string>
    <string name="recording">Recording</string>
    <string name="cancel">Cancel</string>
    <string name="acces_message_option_button">Message option button</string>
    <string name="message">Message</string>

    <string name="error_permission_not_granted">Permission not granted: %s</string>
    <string name="permission_not_granted" formatted="true">%s permission not granted. Please enable this permission in your phone\'s settings.</string>

    <string name="permission_record_audio_title">Microphone Access</string>
    <string name="permission_record_audio_message">Grant permission to send audio messages</string>

    <string name="permission_write_external_storage_title">Gallery Access</string>
    <string name="permission_write_external_storage_message">Grant permission to allow images to be saved to your phone</string>

    <string name="copy">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="delete">Delete</string>
    <string name="forward">Forward</string>
    <string name="message_sent">Message sent!</string>
    <string name="copy_failed">Copy failed!</string>

    <string name="actions">Actions</string>

    <string name="location_services_not_enabled">Location services not enabled</string>
    <string name="location_services_problem_message">There was a problem with the location services. Make sure you enabled them in your phone settings.</string>
    <string name="location_is_null">Location is null</string>

    <string name="view_chat_members">View Members List</string>

</resources>