<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/horizontal_margin"
              android:paddingRight="@dimen/horizontal_margin">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:padding="12dp"
        android:src="@drawable/ic_default_profile_image"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing_for_similar_input">

        <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update_password"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="fill_parent"
            android:minHeight="@dimen/button_height"
            android:layout_height="wrap_content"
            android:text="@string/update_password"
            android:layout_marginTop="@dimen/vertical_spacing_for_similar_input"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_spacing_for_similar_input"
            android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset"
                android:layout_width="0dp"
                android:minHeight="@dimen/button_height"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/half_horizontal_spacing_for_similar_input"
                android:text="@string/reset"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:minHeight="@dimen/button_height"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/half_horizontal_spacing_for_similar_input"
                android:text="@string/save"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify_email"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="fill_parent"
            android:minHeight="@dimen/button_height"
            android:layout_height="wrap_content"
            android:text="@string/verify_email"
            android:layout_marginTop="@dimen/vertical_spacing_for_similar_input"/>

    <include layout="@layout/appkit__error"/>

</LinearLayout>